# youtube

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  PLAN.md  PRODUCTION_GUIDE.md  PROJECT_STRUCTURE_ANALYSIS.md  README.md  _analyze_blacklist.py  _crawl_trends.py  _run_manual_safe.py  _run_manual_script.py  _test_import.py  analyze_sites.py  auto_produce.bat  bing_generator.py  crawl_trends.py  elevenlabs_tts.py  find_patterns.py  generate_sfx.py  goapi_midjourney.py  inspect_sites.py  inspect_sites2.py  main.py  mass_produce.py  openai_tts.py  perfect_one_shot.py  preview_images.py  pyproject.toml  quick_test.py  requirements.txt  run.sh  setup_scheduler.ps1  test_fmkorea.txt  test_log.txt  test_platforms.py  test_theqoo.txt  test_tts_emotions.py  topics.txt  youtube_uploader.py
assets/sfx/: mapping.json
data/: history.json  mass_produce_history.json  style_log.json  topic_history.json
src/youshorts/: __init__.py  __main__.py  cli.py
src/youshorts/config/: __init__.py  constants.py  settings.py  styles.py
src/youshorts/core/: __init__.py  community_crawler.py  metadata.py  news_crawler.py  pipeline.py  script_generator.py  shotstack_renderer.py  tts_engine.py  tts_enhanced.py  video_composer.py  video_downloader.py  youtube_uploader.py
src/youshorts/modules/: community_crawler.py
src/youshorts/quality/: __init__.py  ab_test.py  originality.py  quality_check.py
tests/: conftest.py  test_emotion_flow.py  test_originality.py  test_pipeline.py  test_quality_check.py  test_script_generator.py  test_security.py  test_tts_engine.py
(+18 files in other folders)
