[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "youshorts"
version = "2.0.0"
description = "YouTube Shorts 자동 생성 파이프라인"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "edge-tts>=6.1.0",
    "moviepy==1.0.3",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "imageio-ffmpeg>=0.4.9",
    "pydub>=0.25.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
apify = [
    "apify-client>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
youshorts = "youshorts.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/youshorts"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
